# python_rest_api_testing

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  index.html  pyproject.toml
.github/workflows/: tests.yml
data/: behaviors.csv  behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
data/test-cases/: 11ee6bbe32ae3ba8.json  120252c0a1d1d5ad.json  125e0ccc39dbb4a5.json  12b5b6fa303bf630.json  144d27ec9ea561a0.json  1466e6a1af0db3f1.json  158e2ad1083fa4a2.json  16c874bf183020b9.json  1b3a66bff436ead4.json  1b62854a678b4fc1.json  1bd8b8a89e2cc96a.json  1c3a4b2bf2f70bd4.json  1c438be7b3348e0d.json  1d4b0448668b37b9.json  1d5b6a627fbc2422.json  1d5c8ff798879811.json  1d6095d0e4d0ec5c.json  1dd7ffc3bdfe5f95.json  1dff1db53cf963f.json  1e0c50f02d2524c1.json  1eec6f738ce6a199.json  1f398b120e3efa3c.json  228dc918d335cd89.json  2592a5c9e8f9fe0b.json  25aed26704eaaf18.json  25fdfd326a191af3.json  261cc518ab350070.json  2798ef700f91bf72.json  281c337a25f1606.json  2b215d1885868bf2.json  2b3302e8914406e6.json  2c02b6ff12ee3ff0.json  2d3218fb5a2ee5ca.json  2e43b10759c36d13.json  2ebf1a1927f59717.json  2fc486d0e18f73f2.json  2ff541275ce87590.json  300bc2d1934f94d4.json  30a9a07cbcce840d.json  31a7c305564a8506.json  (+175 more)
export/: influxDbData.txt  prometheusData.txt
history/: categories-trend.json  duration-trend.json  history-trend.json  history.json  retry-trend.json
performance/: locustfile.py
src/: models.py
src/rest_api_client/: base_client.py  client.py  exceptions.py  http.py  retry.py
src/rest_api_client/football_api/: client.py  models.py
src/rest_api_client/go_rest_api/: client.py  models.py
src/rest_api_client/gorest_api/: client.py  models.py
tests/: conftest.py
tests/factories/: user_factory.py
tests/football_api/: conftest.py  test_areas.py  test_competitions.py  test_football_negative.py  test_negative.py
tests/gorest_api/: conftest.py  test_end_to_end.py  test_gorest_negative.py  test_gorest_positive.py  test_negative.py
tests/rest_api/: test_areas.py  test_negative.py
tests/rest_api/football_api/: test_negative.py
tests/rest_api/gorest_api/: test_end_to_end.py  test_negative.py
widgets/: behaviors.json  categories-trend.json  duration-trend.json  duration.json  environment.json  executors.json  history-trend.json  retry-trend.json  severity.json  status-chart.json  suites.json  summary.json
