[project]
name = "python-rest-api-tests"
version = "0.2.0"
description = "Test automation framework for REST API in Python"
authors = [{ name = "Oleksandr Pylkevych", email = "olek_on_github@sent.com" }]
requires-python = ">=3.11,<3.15"
readme = "README.md"
dependencies = [
    "httpx==0.28.1",
    "pydantic>=2.12.5,<3",
    "faker>=40.5.1,<41",
    "email-validator>=2.3.0,<3",
    "allure-pytest>=2.15.3,<3",
    "locust>=2.43.3,<3",
]

[dependency-groups]
dev = ["pytest==9.0.2"]

[tool.uv]
default-groups = "all"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--strict-markers -ra"
markers = [
    "smoke: run smoke tests",
    "destructive: modified external state",
    "negative: negative test cases",
    "end2end: end-to-end test cases"
]
