[project]
name = "python-rest-api-tests"
version = "0.2.0"
description = "Test automation framework for REST API in Python"
authors = [{ name = "Oleksandr Pylkevych", email = "olek_on_github@sent.com" }]
requires-python = ">=3.11,<3.15"
readme = "README.md"
dependencies = [
    "httpx==0.28.1",
    "pydantic>=2.12.5,<3",
    "email-validator>=2.3.0,<3",
]

[dependency-groups]
dev = [
    "pytest==9.0.2",
    "ruff>=0.9.0",
    "faker>=40.5.1,<41",
    "allure-pytest>=2.15.3,<3",
    "locust>=2.43.3,<3",
]

[tool.uv]
default-groups = "all"

[tool.ruff]
line-length = 100
target-version = "py314"
exclude = [".venv"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "I",   # import sorting
    "UP",  # pyupgrade
    "B",   # bugbear
    "SIM", # simplification
    "C90", # complexity
    "ARG", # unused arguments
    "T20", # print statements
    "PT"   # pytest-specific rules
]

ignore = [
    "E501",   # line length handled separately
]

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--strict-markers -ra"
markers = [
    "smoke: run smoke tests",
    "destructive: modified external state",
    "negative: negative test cases",
    "end2end: end-to-end test cases"
]
